route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webby
  namespace: <INPUT NAMESPACE HERE>
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: webby-service
    weight: 100
  wildcardPolicy: None
